--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -67,13 +67,13 @@
 <footer class="bg-dark py-4 mt-auto">
     <div class="container px-5">
         <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-            <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2023</div></div>
+            <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; GymStats 2024</div></div>
             <div class="col-auto">
-                <a class="link-light small" href="#!">Privacy</a>
+                <a class="link-light small" href="https://web.telegram.org/k/#@NeVOODOO">Telegram</a>
                 <span class="text-white mx-1">&middot;</span>
-                <a class="link-light small" href="#!">Terms</a>
+                <a class="link-light small" href="https://novosibirsk.hh.ru/resume/b989ed11ff0bc70bfe0039ed1f4e7364535961">HeadHunter</a>
                 <span class="text-white mx-1">&middot;</span>
-                <a class="link-light small" href="#!">Contact</a>
+                <a class="link-light small" href="https://github.com/neHAILVOODOO">GitHub</a>
             </div>
         </div>
     </div>
